2025-09-19T00:51:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17845216517 # 771
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-19
* notice: last 14d: unq all: 4 12
* notice: prev accum: outdated-unq outdated-all / unq all: 926 1405 / 937 1416
* notice: next accum: outdated-unq outdated-all / unq all: 927 1406 / 939 1418
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-09-05] / [2025-09-18]

2025-09-18T00:49:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17814584266 # 770
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-18
* notice: last 14d: unq all: 3 11
* notice: prev accum: outdated-unq outdated-all / unq all: 925 1404 / 936 1415
* notice: next accum: outdated-unq outdated-all / unq all: 926 1405 / 937 1416
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-04] / [2025-09-17]

2025-09-17T00:49:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17783140176 # 769
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-17
* notice: last 14d: unq all: 2 11
* notice: prev accum: outdated-unq outdated-all / unq all: 924 1403 / 935 1414
* notice: next accum: outdated-unq outdated-all / unq all: 925 1404 / 936 1415
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-03] / [2025-09-16]

2025-09-16T00:49:53Z: