@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-19T00:51:36Z",
-  "count_outdated" : 1406,
-  "uniques_outdated" : 927,
-  "count" : 1418,
-  "uniques" : 939,
+  "timestamp" : "2025-09-20T00:47:44Z",
+  "count_outdated" : 1407,
+  "uniques_outdated" : 928,
+  "count" : 1419,
+  "uniques" : 940,
   "clones" : [
-    {
-      "timestamp": "2025-09-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-07T00:00:00Z",
       "count": 1,
@@ -103,6 +94,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-09-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
