@@ -1,12 +1,7 @@
 {
   "count": 12,
-  "uniques": 4,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2025-09-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-09-07T00:00:00Z",
       "count": 1,
@@ -56,6 +51,11 @@
       "timestamp": "2025-09-18T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-09-19T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
