@@ -1,3 +1,12 @@
+2025-09-20T00:47:44Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17872991406 # 772
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-20
+* notice: last 14d: unq all: 5 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 927 1406 / 939 1418
+* notice: next accum: outdated-unq outdated-all / unq all: 928 1407 / 940 1419
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-09-06] / [2025-09-19]
+
 2025-09-19T00:51:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17845216517 # 771
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-19
